[package]
name = "elias-fano"
version = "2.0.0"
authors = ["Tom Arrell <tom.arrell@gmail.com>"]
description = "An implementation of Elias-Fano encoding in Rust"
repository = "https://github.com/tomarrell/rust-elias-fano"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
fixedbitset = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }


[features]
default = []
serialization = ["serde", "fixedbitset/serde"]
